--- a/grupo3-IMDB/css/styles.css
+++ b/grupo3-IMDB/css/styles.css
@@ -6,3 +6,38 @@
     color: #ff8f00;
     text-decoration: underline !important; 
 }
+
+#formPersonal {
+    border: 1px solid #cccccc;
+    border-radius: 8px; 
+    padding: 20px;
+    font-weight: bold;
+}
+
+#formPersonal h2{
+    padding-bottom: 5px;
+}
+
+#formPersonal button{
+    background-color: #FFD700;
+    color: black;
+}
+
+#formPersonal button:hover{
+    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+input[type="text"], input[type="date"], select, textarea {
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    transition: box-shadow 0.3s ease; 
+    outline: none; 
+}
+
+input[type="text"]:focus,
+input[type="date"]:focus,
+select:focus,
+textarea:focus {
+    box-shadow: 0 0 8px rgba(135, 206, 235, 0.5);
+    border-color: #87CEEB; 
+}
