--- a/grupo3-IMDB/css/styles.css
+++ b/grupo3-IMDB/css/styles.css
@@ -41,3 +41,16 @@ textarea:focus {
     box-shadow: 0 0 8px rgba(135, 206, 235, 0.5);
     border-color: #87CEEB; 
 }
+#Seccion{
+        border: 1px solid #cccccc;
+        border-radius: 8px; 
+        padding: 20px;
+        font-weight: bold;
+        margin-left: 8px;
+}
+#botonEnviar{
+    align-self: center;
+}
+#formulario{
+    display: flex;
+}
