--- a/grupo3-IMDB/css/styles.css
+++ b/grupo3-IMDB/css/styles.css
@@ -37,7 +37,15 @@ textarea:focus {
         border-radius: 8px; 
         padding: 20px;
         font-weight: bold;
-        margin-left: 8px;
+        margin-left: 8px;     
+}
+#secciond{
+    border: 1px solid #cccccc;
+    border-radius: 8px; 
+    padding: 20px;
+    font-weight: bold;
+    margin-left: 8px;
+    padding-right: 8px;     
 }
 
 #botonEnviar button{
