--- a/grupo3-IMDB/css/styles.css
+++ b/grupo3-IMDB/css/styles.css
@@ -63,10 +63,7 @@ li{
 #tarjeta{
     border: 1px solid #cccccc;
     border-radius: 0 !important;
-    padding: 20px;
     font-weight: bold;
-    margin-left: 8px;
-    padding-right: 8px;
 }
 
 #tarjeta h5{
@@ -74,6 +71,7 @@ li{
 }
 
 #tarjeta:focus{
-    border: 2px solid orange; /* Aplica un borde naranja al enfocarse */
-    box-shadow: 0 0 10px rgba(255, 165, 0, 0.6); /* Agrega una sombra naranja para mayor énfasis */
+    border: 2px solid orange;
+    box-shadow: 0 0 10px rgba(255, 165, 0, 0.6);
+    outline: none;
 }
