--- a/grupo3-IMDB/css/styles.css
+++ b/grupo3-IMDB/css/styles.css
@@ -71,6 +71,20 @@ textarea:focus {
     box-shadow: 0 0 10px rgba(255, 165, 0, 0.6); /* Agrega una sombra naranja para mayor énfasis */
 }
 #listaErrores{
-    border: red;
+    border: 1px solid red;
+    border-radius: 8px;
+}
 
+#listaErrores ul{
+    list-style-type: disc;
+    padding-left: 20px;
+}
+
+#listaErrores ul li{
+    border: none;
+    padding-left: 0;
+}
+
+#listaErrores h3{
+    color:red;
 }
